# ROS2-Based-Obstacle-avoidance-and-semantic-navigation-using-Gazebo-and-Rviz2

./: LICENSE  README.md
semantic_nav_ws/semantic_nav_ws/src/semantic_nav/: CMakeLists.txt  README.md  package.xml
semantic_nav_ws/semantic_nav_ws/src/semantic_nav/config/: nav2_params.yaml
semantic_nav_ws/semantic_nav_ws/src/semantic_nav/launch/: semantic_nav_demo.launch.py
semantic_nav_ws/semantic_nav_ws/src/semantic_nav/rviz/: semantic_nav.rviz
semantic_nav_ws/semantic_nav_ws/src/semantic_nav/src/: obstacle_monitor.cpp  semantic_navigator.cpp
